--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - run: npm install
+    - name: Markdown
+      run: npm run lint-markdown
+      if: always()
     - name: HTML
       run: npm run lint-html
       if: always()
